@@ -1,3 +1,8 @@
+Sun Dec 13 14:16:09 2015  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/shellwords.rb (Shellwords#shellsplit): Document that this
+	  method does not treat shell metacharacters as such.
+
 Sun Dec 13 12:17:43 2015  Eric Wong  <e@80x24.org>
 
 	* lib/shellwords.rb (shellescape): duplicate frozen literal
